<resources>
    <string name="app_name">Duck Hunter</string>
    <string name="string_email">e-mail</string>
    <string name="string_password">password</string>
    <string name="string_rememberme">Remember me</string>
    <string name="string_start">Start Game</string>
    <string name="string_register">Register</string>
    <string name="string_new_game">New Game</string>
    <string name="string_play_online">Play Online</string>
    <string name="string_exit">Exit</string>
    <string name="string_famous_hall">FAMOUS HALL</string>
    <string name="string_pos">POS.</string>
    <string name="string_ducks">Ducks</string>
    <string name="string_player">Player</string>
    <string name="famous_hall">Famous Hall</string>
</resources>