<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_game"
    android:padding="16dp"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/title" />

    <EditText
        android:id="@+id/editTextEmailRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:fontFamily="@font/press_start_2p"
        android:hint="@string/string_email"
        android:inputType="textEmailAddress"
        android:textColor="@android:color/white"
        android:textColorLink="@android:color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/imageViewLogo"
        app:layout_constraintStart_toStartOf="@+id/imageViewLogo"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLogo" />

    <EditText
        android:id="@+id/editTextPasswordRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:fontFamily="@font/press_start_2p"
        android:hint="@string/string_password"
        android:inputType="numberPassword"
        android:textColor="@android:color/white"
        android:textColorLink="@android:color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/editTextEmailRegister"
        app:layout_constraintStart_toStartOf="@+id/editTextEmailRegister"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmailRegister" />

    <Button
        android:id="@+id/buttonRegisterAndLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimaryDark"
        android:fontFamily="@font/pixel"
        android:text="@string/string_register"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPasswordRegister"
        android:layout_marginTop="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>